# Colourlap_pro

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  colorlab_pro.spec  fix-progress.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run.bat  ui_mockup.html
ai_context/: AI_CONTEXT.md  ALIGNMENT_CHECK.md  COVERAGE_REPORT.md  CURRENT_TASK.md  DOMAIN_KNOWLEDGE.md  GAMUT_AND_WHITEPOINT_SPEC.md  GAMUT_UI_LOCK_SPEC.md  GAMUT_UI_SPEC.md  KNOWN_ISSUES.md  PROJECT_STATUS.md  RELEASE_CHECK.md  RELEASE_NOTES.md  SPECTRUM_UI_LOCK_SPEC.md  TASK_TRACKING.md  UI_LAYOUT_CHANGE.md  WHITE_POINT_UI_LOCK_SPEC.md
code-review-report/: code-review-report.html
code-review-report/assets/: charts.js
colorlab-pro-tech-doc/: colorlab-pro-tech-doc.html
dev/: CF数据库.xlsx  gen_led.py  mimo-audit-report.html  故障排除文档.md  重构完成报告.md
docs/: 01_PRD_and_UI_Design.md  02_UI_Layout_Specification.md  03_Technical_Architecture.md  04_Core_Algorithm_Specification.md  05_API_Contract_and_DTO_Specification.md  06_Database_Design_and_Data_Dictionary.md  07_Coding_Standard.md  08_Test_Plan_and_Acceptance_Specification.md  09_Reference_Dataset_Specification.md  10_Development_Roadmap.md  11_AI_Development_Guide.md  12_Decision_Log.md  13_UI_Design_Freeze.md  README.md  UI_DESIGN_NO_SIDEBAR.html  cie_chart_aspect_ratio_fix.md
docs/ui_mockups/: 01_spectrum_page.html  01_spectrum_page.md  01_spectrum_page_improved.html  02_gamut_calculator_page.html  02_gamut_calculator_page.md  02_gamut_calculator_page_improved.html  03_white_point_page.html  03_white_point_page.md  03_white_point_page_improved.html  04_thickness_optimizer_page.html  04_thickness_optimizer_page.md  04_thickness_optimizer_page_improved.html  index.html  index.md
openspec/changes/ai-feature-audit/: proposal.md
scripts/: init_db.py  run_app.py  validate_reference_data.py
src/colorlab_pro/: __init__.py  cli.py
src/colorlab_pro/config/: __init__.py  settings.py
tests/: conftest.py
tests/integration/: test_app_launch.py  test_end_to_end.py
tests/ui/: __init__.py
(+144 files in other folders)
