[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colorlab-pro"
version = "1.1.0"
description = "Professional spectral data management and gamut analysis tool for the display industry."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "Proprietary" }
authors = [
    { name = "ColorLab Pro Team" }
]
keywords = ["display", "spectral", "gamut", "color-science", "ciexyz", "cie1931"]

dependencies = [
    "PySide6>=6.6,<6.13",
    "numpy>=1.26,<2.3",
    "colour-science>=0.4.4,<0.5",
    "SQLAlchemy>=2.0,<2.1",
    "shapely>=2.0,<2.2",
    "loguru>=0.7,<0.8",
    "scipy>=1.11,<1.18",
    "openpyxl>=3.1,<3.2",
    "pyyaml>=6.0,<6.1",
    "matplotlib>=3.7,<3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
colorlab-pro = "colorlab_pro.cli:main"
colorlab-pro-gui = "colorlab_pro.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"colorlab_pro.ui" = ["**/*.qss", "**/*.ui", "**/*.html", "**/*.js"]
"colorlab_pro.resources" = ["**/*"]

[tool.coverage.run]
source = ["src/colorlab_pro"]
# Business logic layers (engines/services/controllers) are fully covered and
# gated at 90%. UI/cli/migrations/exporters are measured but reported
# separately and do not block the gate.
omit = [
    "src/colorlab_pro/ui/*",
    "src/colorlab_pro/cli.py",
    "src/colorlab_pro/database/migrations.py",
    "src/colorlab_pro/exporters/report_exporter.py",
]

[tool.coverage.report]
# Gate applies to business-logic layers only (engines + services +
# controllers + repositories + importers + dto + utils + config).
# UI layer is validated via integration/manual testing.
fail_under = 90
show_missing = true

[tool.coverage.paths]
source = [
    "src/colorlab_pro",
]